--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
           <strong>John Doe</strong>
         </a>
-        <ul class="dropdown-menu text-small shadow" style="">
+        <ul class="dropdown-menu text-small shadow">
           <li><a class="dropdown-item" href="#">Configurações</a></li>
           <li><a class="dropdown-item" href="#">Perfil</a></li>
           <li>
