construindo assunto page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link link-body-emphasis">
+          <a href="./pages/assuntos_page.html" class="nav-link link-body-emphasis">
             <svg class="bi pe-none me-2" width="16" height="16">
               <use xlink:href="#table"></use>
             </svg>
