Create default page

--- a/pages/default.html
+++ b/pages/default.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="../styles/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -80,7 +80,6 @@
     <div>
     </div>
     <!-- END CONTEÚDO DO SITE-->
-
     <!-- START FOOTER -->
     <footer class="align-self-end w-100 rounded">
       <div class="row  mb-0 mt-5 mx-4 justify-content-xl-around justify-content-sm-between">
@@ -146,7 +145,7 @@
     </footer>
     <!-- END FOOTER -->
   </main>
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
