--- a/pages/subject.html
+++ b/pages/subject.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+
 <body class="d-flex flex-nowrap align-items-start justify-content-start">
+    <!-- START SIDEBAR -->
     <div class="p-3 h-100 ">
         <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary h-100 rounded" style="width: 280px;">
             <a href="/"
@@ -74,9 +76,10 @@
             </div>
         </div>
     </div>
+    <!-- END SIDEBAR -->
     <main
-        class="d-flex flex-column w-100 h-100 gap-2 overflow-y-auto overflow-x-hidden justify-content-between p-3 pb-3 pe-3">
-        <!-- START CONTEÚDO DO SITE-->
+        class="d-flex flex-column w-100 h-100 gap-2 overflow-y-auto overflow-x-hidden justify-content-between p-2 pb-3 pe-3">
+        <!-- START CONTEÚDO DO SITE ---ALTERE APENAS AQUI--- -->
         <div class="d-flex gap-3 align-items-start justify-content-start position-relative">
             <div class="column w-100 d-flex flex-column gap-5">
                 <div class="publicacao">
@@ -210,6 +213,7 @@
             </div>
         </div>
         <!-- END CONTEÚDO DO SITE-->
+        <!-- START FOOTER -->
         <footer class="align-self-end w-100 rounded">
             <div class="row  mb-0 mt-5 mx-4 justify-content-xl-around justify-content-sm-between">
                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 pt-4 order-1">
@@ -278,8 +282,9 @@
                 </div>
             </div>
         </footer>
+        <!-- END FOOTER -->
     </main>
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
