--- a/pages/subject.html
+++ b/pages/subject.html
@@ -22,7 +22,7 @@
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active" aria-current="page">
+                    <a href="../index.html" class="nav-link active" aria-current="page">
                         Overview
                     </a>
                 </li>
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./pages/assuntos_page.html" class="nav-link link-body-emphasis">
+                    <a href="../pages/subject.html" class="nav-link link-body-emphasis">
                         Assuntos
                     </a>
                 </li>
@@ -77,8 +77,7 @@
         </div>
     </div>
     <!-- END SIDEBAR -->
-    <main
-        class="d-flex flex-column w-100 h-100 gap-2 overflow-y-auto overflow-x-hidden justify-content-between p-2 pb-3 pe-3">
+    <main class="d-flex flex-column w-100 h-100 gap-2 overflow-y-auto overflow-x-hidden justify-content-between p-3">
         <!-- START CONTEÚDO DO SITE ---ALTERE APENAS AQUI--- -->
         <div class="d-flex gap-3 align-items-start justify-content-start position-relative">
             <div class="column w-100 d-flex flex-column gap-5">
