estilizando subject page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </a>
         </li>
         <li>
-          <a href="./pages/assuntos_page.html" class="nav-link link-body-emphasis">
+          <a href="./pages/subject.html" class="nav-link link-body-emphasis">
             Assuntos
           </a>
         </li>
