--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <hr class="line">
       <div class="row text-center py-3">
         <div class="col">
-          <p class="text-muted"><b>ALL RIGHTS ARE RESERVED</b> </p>
+          <p class="text-muted"><b>TODOS OS DIREITOS RESERVADOS</b> </p>
         </div>
       </div>
     </footer>
