--- a/pages/subject.html
+++ b/pages/subject.html
@@ -277,13 +277,13 @@
             <hr class="line">
             <div class="row text-center py-3">
                 <div class="col">
-                    <p class="text-muted"><b>ALL RIGHTS ARE RESERVED</b> </p>
+                    <p class="text-muted"><b>TODOS OS DIREITOS RESERVADOS</b> </p>
                 </div>
             </div>
         </footer>
         <!-- END FOOTER -->
     </main>
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
