adding profile page

--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
           <strong>John Doe</strong>
         </a>
         <ul class="dropdown-menu text-small shadow">
-          <li><a class="dropdown-item" href="#">Configurações</a></li>
-          <li><a class="dropdown-item" href="#">Perfil</a></li>
+
+          <li><button class="dropdown-item" type="button" data-bs-toggle="modal"
+              data-bs-target="#profile-modal">Perfil</button></li>
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="#">Sair</a></li>
+          <li><button class="dropdown-item">Sair</button></li>
         </ul>
       </div>
     </div>
@@ -145,6 +146,68 @@
     </footer>
     <!-- END FOOTER -->
   </main>
+  <div id="profile-modal" class="modal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content wrapper bg-white p-2 rounded border">
+        <h4 class="pb-4 border-bottom">Configurações do Usuário</h4>
+        <div class="d-flex align-items-start py-3 border-bottom gap-3">
+          <div class="pl-sm-4 pl-2" id="img-section">
+            <b>Foto de Perfil</b>
+            <p>Tipos de arquivo aceito ( .png, .jpeg, .jpg). Tamanho máximo de 1MB</p>
+            <input class="d-none" type="file" name="profile" id="profile-image"
+              accept="image/png, image/gif, image/jpeg">
+            <label for="profile-image">
+              <b class="btn button border">Upload</b>
+            </label>
+          </div>
+        </div>
+        <div class="py-2">
+          <div class="row py-2">
+            <div class="col-md-6">
+              <label for="firstname">Nome</label>
+              <input type="text" class="bg-light form-control" placeholder="Steve">
+            </div>
+            <div class="col-md-6 pt-md-0 pt-3">
+              <label for="lastname">Sobrenome</label>
+              <input type="text" class="bg-light form-control" placeholder="Smith">
+            </div>
+          </div>
+          <div class="row py-2">
+            <div class="col-md-6">
+              <label for="email">E-mail</label>
+              <input type="text" class="bg-light form-control" placeholder="steve_@email.com">
+            </div>
+            <div class="col-md-6 pt-md-0 pt-3">
+              <label for="phone">Telefone</label>
+              <input type="tel" class="bg-light form-control" placeholder="+1 213-548-6015">
+            </div>
+          </div>
+          <div class="row py-2">
+            <div class="col-md-6">
+              <label for="country">País</label>
+              <select name="country" id="country" class="bg-light">
+                <option value="br" selected>BR</option>
+                <option value="us">USA</option>
+              </select>
+            </div>
+            <div class="col-md-6 pt-md-0 pt-3" id="lang">
+              <label for="language">Idioma</label>
+              <div class="arrow">
+                <select name="language" id="language" class="bg-light">
+                  <option value="pt-br" selected>Português</option>
+                  <option value="en-us">English (United States)</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="py-3 pb-4">
+            <button class="btn btn-primary mr-3" data-bs-dismiss="modal">Salvar</button>
+            <button class="btn border button" data-bs-dismiss="modal">Cancelar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
