fix: quiz_manager and user_quiz page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link link-body-emphasis">
+          <a href="./pages/user_quiz.html" class="nav-link link-body-emphasis">
             Quiz
           </a>
         </li>
@@ -40,7 +40,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link link-body-emphasis">
+          <a href="./pages/quiz_manager.html" class="nav-link link-body-emphasis">
             Criar Quiz
           </a>
         </li>
