--- a/pages/subject.html
+++ b/pages/subject.html
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link link-body-emphasis">
+                    <a href="../pages/user_quiz.html" class="nav-link link-body-emphasis">
                         Quiz
                     </a>
                 </li>
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link link-body-emphasis">
+                    <a href="../pages/quiz_manager.html" class="nav-link link-body-emphasis">
                         Criar Quiz
                     </a>
                 </li>
