--- a/pages/login.html
+++ b/pages/login.html
@@ -29,18 +29,18 @@
                                         <div class="form-outline mb-2">
                                             <input type="email" id="form2Example11" class="form-control"
                                                 placeholder="Usuário" />
-                                            <!-- <label class="form-label" for="form2Example11"></label> -->
+                                            <label class="form-label" for="form2Example11"></label>
                                         </div>
 
                                         <div class="form-outline mb-4">
                                             <input type="password" id="form2Example22" class="form-control"
                                                 placeholder="Senha" />
-                                            <!--    <label class="form-label" for="form2Example22"></label> -->
+                                            <label class="form-label" for="form2Example22"></label>
                                         </div>
 
                                         <div class="text-center pt-1 mb-5 pb-1">
                                             <a class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-1"
-                                                type="button" href="index.html">Login</a><br>
+                                                type="button" href="../index.html">Login</a><br>
                                             <a class="text-muted" href="#!">Esqueceu a senha?</a>
                                         </div>
 
@@ -58,8 +58,7 @@
                                     <h4 class="mb-4">Aprenda e compartilhe sobre sustentabilidade com a Schneider
                                         Electric</h4>
                                     <p class="small mb-0">O Sustagram é uma plataforma desenvolvida para que toda a
-                                        força
-                                        de trabalho da Schneider conheça mais sobre sustentabilidade. Venha
+                                        força de trabalho da Schneider conheça mais sobre sustentabilidade. Venha
                                         compartilhar!</p>
                                 </div>
                             </div>
