--- a/pages/default.html
+++ b/pages/default.html
@@ -35,7 +35,7 @@
         </li>
         <hr>
         <li>
-          <a href="#" class="nav-link link-body-emphasis">
+          <a href="../pages/result.html" class="nav-link link-body-emphasis">
             Resultados
           </a>
         </li>
