--- a/pages/user_quiz.html
+++ b/pages/user_quiz.html
@@ -36,7 +36,7 @@
                 </li>
                 <hr>
                 <li>
-                    <a href="#" class="nav-link link-body-emphasis">
+                    <a href="../pages/result.html" class="nav-link link-body-emphasis">
                         Resultados
                     </a>
                 </li>
