fix: removing addicional spaces

--- a/pages/quiz_manager.html
+++ b/pages/quiz_manager.html
@@ -300,6 +300,7 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/quiz-manager.js"></script>
 </body>
