--- a/pages/user_quiz.html
+++ b/pages/user_quiz.html
@@ -88,12 +88,12 @@
                             <form id="quiz-response-form">
                                 <!-- A pergunta do quiz será inserida aqui pelo JavaScript -->
                             </form>
-                            <button type="button" class="btn mt-4" id="prev-question-btn"
+                            <button type="button" class="btn btn-outline-primary mt-4" id="prev-question-btn"
                                 onclick="showPrevQuestion()">Pergunta
                                 Anterior</button>
-                            <button type="button" class="btn mt-4 ml-2" id="next-question-btn"
+                            <button type="button" class="btn btn-primary mt-4 ml-2" id="next-question-btn"
                                 onclick="showNextQuestion()">Próxima Pergunta</button>
-                            <button type="button" class="btn mt-4 ml-2" id="submit-quiz-btn"
+                            <button type="button" class="btn btn-primary mt-4 ml-2" id="submit-quiz-btn"
                                 onclick="submitResponses()">Submeter Respostas</button>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                            <a href="#suaAncoraDesignada" class="btn btn-primary">Página Inicial</a>
+                            <a href="../index.html" class="btn btn-primary">Página Inicial</a>
                         </div>
                     </div>
                 </div>
@@ -252,6 +252,7 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/quiz_response.js"></script>
 </body>
