fix: adding new sidebar elements

--- a/index.html
+++ b/index.html
@@ -44,7 +44,17 @@
             Criar Quiz
           </a>
         </li>
-
+        <li>
+          <a href="../pages/about.html" class="nav-link link-body-emphasis">
+            Sobre o Projeto
+          </a>
+        </li>
+        <hr>
+        <li>
+          <a class="btn btn-outline-primary " href="https://www.youtube.com/watch?v=weHnUwrBtYo" class="nav-link">
+            Video Pitch
+          </a>
+        </li>
 
       </ul>
       <hr>
