--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@
       <hr>
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-          <a href="../index.html" class="nav-link link-body-emphasis">
+          <a href="../index.html" class="nav-link active" aria-current="page">
             Overview
           </a>
         </li>
@@ -35,7 +35,7 @@
         </li>
         <hr>
         <li>
-          <a href="../pages/result.html" class="nav-link active" aria-current="page">
+          <a href="../pages/result.html" class="nav-link link-body-emphasis">
             Resultados
           </a>
         </li>
@@ -51,7 +51,7 @@
         </li>
         <hr>
         <li>
-          <a class="btn btn-outline-primary " href="https://www.youtube.com/watch?v=weHnUwrBtYo" class="nav-link">
+          <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=weHnUwrBtYo" class="nav-link">
             Video Pitch
           </a>
         </li>
@@ -79,75 +79,7 @@
   <!-- END SIDEBAR -->
   <main class="d-flex flex-column w-100 h-100 gap-2 overflow-y-auto overflow-x-hidden justify-content-between p-3">
     <!-- START CONTEÚDO DO SITE ---ALTERE APENAS AQUI--- -->
-    <h1 class="text-success text-center ">Resultados</h1>
-
-    <div class="container">
-      <div class="row fs-1">
-        <div class="col text-center text-success"> 2 </div>
-        <div class="col text-center text-success"> 1 </div>
-        <div class="col text-center text-success"> 3 </div>
-        <div class="w-100"></div>
-        <div class="col text-center"><img src="../img/ranking2.jpg" alt="foto homem segundo lugar" width="100px"
-            height="100px" class="rounded-circle border border-success"> <br> @JoãoFS</div>
-        <div class="col text-center"><img src="../img/ranking1.jpg" alt="foto mulher primeiro lugar" width="150px"
-            height="150px" class="rounded-circle border border-success"> <br> @MariaMMM</div>
-        <div class="col text-center"><img src="../img/ranking3.jpg" alt="foto homem terceiro lugar" width="100px"
-            height="100px" class="rounded-circle border border-success"> <br> @RoberrtoAN</div>
-      </div>
-    </div>
-    <table class="table table-secondary">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Avatar</th>
-          <th scope="col">Nome</th>
-          <th scope="col">@</th>
-          <th scope="col">Pontuação</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td><img src="../img/ranking1.jpg" width="30px" height="30px" class="rounded-circle border border-success">
-          </td>
-          <td>Maria</td>
-          <td>@MariaMMM</td>
-          <td>874</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td><img src="../img/ranking2.jpg" width="30px" height="30px" class="rounded-circle border border-success">
-          </td>
-          <td>João</td>
-          <td>@JoãoFS</td>
-          <td>750</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td><img src="../img/ranking3.jpg" width="30px" height="30px" class="rounded-circle border border-success">
-          </td>
-          <td>Roberto</td>
-          <td>@RoberrtoAN</td>
-          <td>710</td>
-        </tr>
-        <tr>
-          <th scope="row">4</th>
-          <td><img src="https://avatars.githubusercontent.com/u/98681?v=4" width="30px" height="30px"
-              class="rounded-circle border border-success"></td>
-          <td>John</td>
-          <td>@JohnDoe</td>
-          <td>695</td>
-        </tr>
-        <tr>
-          <th scope="row">5</th>
-          <td><img src="../img/ranking5.jpg" width="30px" height="30px" class="rounded-circle border border-success">
-          </td>
-          <td>Paulo</td>
-          <td>@PauloFFS</td>
-          <td>655</td>
-        </tr>
-      </tbody>
-    </table>
+    <div>
     </div>
     <!-- END CONTEÚDO DO SITE-->
     <!-- START FOOTER -->
