--- a/pages/quiz_manager.html
+++ b/pages/quiz_manager.html
@@ -45,8 +45,18 @@
                         Criar Quiz
                     </a>
                 </li>
-
-
+                <li>
+                    <a href="../pages/about.html" class="nav-link link-body-emphasis">
+                        Sobre o Projeto
+                    </a>
+                </li>
+                <hr>
+                <li>
+                    <a class="btn btn-outline-primary " href="https://www.youtube.com/watch?v=weHnUwrBtYo"
+                        class="nav-link">
+                        Video Pitch
+                    </a>
+                </li>
             </ul>
             <hr>
             <div class="dropdown">
@@ -73,9 +83,9 @@
         <!-- START CONTEÚDO DO SITE ---ALTERE APENAS AQUI--- -->
         <div>
 
-            <div class="container mt-5">
+            <div class="container d-flex flex-column align-items-start justify-content-center gap-3 w-100">
                 <!-- Seção para criar um novo quiz -->
-                <div class="card mb-4">
+                <div class="card w-100">
                     <div class="card-header">
                         <h2>Criar Novo Quiz</h2>
                     </div>
@@ -98,7 +108,7 @@
                 </div>
 
                 <!-- Seção para listar os quizzes criados -->
-                <div class="card mb-4">
+                <div class="card w-100">
                     <div class="card-header">
                         <h2>Quizzes Criados</h2>
                     </div>
@@ -110,7 +120,7 @@
                 </div>
 
                 <!-- Seção para visualizar o quiz ativo -->
-                <div class="card">
+                <div class="card w-100">
                     <div class="card-header">
                         <h2>Visualizar Quiz Ativo</h2>
                     </div>
