--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@
       <hr>
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-          <a href="../index.html" class="nav-link active" aria-current="page">
+          <a href="../index.html" class="nav-link link-body-emphasis">
             Overview
           </a>
         </li>
@@ -44,15 +44,15 @@
             Criar Quiz
           </a>
         </li>
-        <li>
-          <a href="../pages/about.html" class="nav-link link-body-emphasis">
-            Sobre o Projeto
-          </a>
-        </li>
         <hr>
         <li>
           <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=weHnUwrBtYo" class="nav-link">
             Video Pitch
+          </a>
+        </li>
+        <li>
+          <a href="../pages/about.html" class="nav-link active" aria-current="page">
+            Sobre o Projeto
           </a>
         </li>
       </ul>
