--- a/pages/user_quiz.html
+++ b/pages/user_quiz.html
@@ -46,15 +46,15 @@
                     </a>
                 </li>
                 <hr>
+                <li class="mb-2">
+                    <a href="../pages/about.html" class="nav-link link-body-emphasis">
+                        Sobre o Projeto
+                    </a>
+                </li>
                 <li>
                     <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=weHnUwrBtYo"
                         class="nav-link">
                         Video Pitch
-                    </a>
-                </li>
-                <li>
-                    <a href="../pages/about.html" class="nav-link link-body-emphasis">
-                        Sobre o Projeto
                     </a>
                 </li>
             </ul>
