--- a/pages/result.html
+++ b/pages/result.html
@@ -45,14 +45,14 @@
           </a>
         </li>
         <hr>
-        <li>
-          <a class="btn btn-outline-primary " href="https://www.youtube.com/watch?v=weHnUwrBtYo" class="nav-link">
-            Video Pitch
+        <li class="mb-2">
+          <a href="../pages/about.html" class="nav-link link-body-emphasis">
+            Sobre o Projeto
           </a>
         </li>
         <li>
-          <a href="../pages/about.html" class="nav-link link-body-emphasis">
-            Sobre o Projeto
+          <a class="btn btn-outline-primary " href="https://www.youtube.com/watch?v=weHnUwrBtYo" class="nav-link">
+            Video Pitch
           </a>
         </li>
       </ul>
