add texto sobre o projeto

--- a/pages/about.html
+++ b/pages/about.html
@@ -73,6 +73,52 @@
     </div>
   </div>
   <!-- END SIDEBAR -->
+  <div>
+    <h1>Sobre o Projeto</h1>
+    <p>Bem-vindo à página de "Sobre o Projeto", onde você poderá descobrir os detalhes essenciais por trás da criação
+      desta plataforma dedicada à conscientização e prática da sustentabilidade. Nossa missão é não apenas informar, mas
+      também inspirar ações sustentáveis em sua vida diária, refletindo positivamente no ambiente ao seu redor.</p>
+    <h1>Integrantes e Contribuições</h1>
+    <p>Quem vós escreve este texto é o Integrante Elias, e permita-me expressar o quão enriquecedora foi a experiência
+      de criar esta plataforma. Cada um de nós, membros da equipe, mergulhou profundamente nesse projeto, resultando em
+      uma realização que nos enche de orgulho.</p>
+    <p>Este projeto é fruto do trabalho colaborativo de um grupo dedicado de desenvolvedores comprometidos com a causa
+      da sustentabilidade. Cada integrante desempenhou um papel fundamental na concretização desta visão. A concepção do
+      projeto nasceu de ideias compartilhadas e discussões em equipe. As páginas, funcionalidades e conteúdos foram
+      meticulosamente planejados e decididos por consens</p>
+    <p>O vídeo pitch que apresenta nosso projeto foi habilmente criado pelo membro Victor Hugo, demonstrando sua
+      expertise em edição de vídeo. Na estrutura da plataforma, as responsabilidades foram distribuídas da seguinte
+      forma:</p>
+    <ul>
+      <li>Dionísio Pereira: Página de login</li>
+      <li>Elias Gomes: Página de Assuntos</li>
+      <li>Victor Hugo: Página de Resultados</li>
+      <li>Vinicius Laguna: Página do Quiz e design do quiz</li>
+      <li>Vinicius César: Página de configurações do usuário, rodapé e cabeçalho</li>
+    </ul>
+    <p>É importante ressaltar que todos os membros colaboraram de maneira significativa ao longo de todo o
+      desenvolvimento das páginas, desde a concepção até a implementação final. O compartilhamento de conhecimentos, a
+      assistência mútua e o comprometimento coletivo foram os pilares que sustentaram nosso progresso. O trabalho foi
+      cuidadosamente distribuído para evitar sobrecarga e garantir uma colaboração eficaz.</p>
+    <h1>Recursos e Conteúdos Utilizados</h1>
+    <p>
+      A construção dessa plataforma foi fundamentada em uma variedade de recursos e conhecimentos. Utilizamos as
+      seguintes tecnologias e ferramentas para dar vida à nossa visão:
+    </p>
+    <ul>
+      <li>HTML e CSS: Para estruturar e estilizar as páginas</li>
+      <li>JavaScript: Para adicionar interatividade e dinamismo</li>
+      <li>Bootstrap: Utilizado para estilos responsivos e modernos</li>
+      <li>jQuery: Implementação de funcionalidades avançadas</li>
+      <li>Font Awesome: Ícones que enriquecem a experiência do usuário</li>
+    </ul>
+    <h1>Nosso Propósito</h1>
+    <p>Por fim, nosso desejo é que essa plataforma seja um catalisador de mudanças positivas na vida de todos os
+      usuários. Acreditamos no poder das pequenas ações para transformar o mundo ao nosso redor. Esperamos que você
+      encontre inspiração, conhecimento e ferramentas práticas aqui para fazer sua parte na construção de um futuro mais
+      sustentável. Junte-se a nós nessa jornada, pois, juntos, podemos causar um impacto significativo por meio de
+      atitudes conscientes e responsáveis.</p>
+  </div>
   <main class="d-flex flex-column w-100 h-100 gap-2 overflow-y-auto overflow-x-hidden justify-content-between p-3">
     <!-- START CONTEÚDO DO SITE ---ALTERE APENAS AQUI--- -->
     <div>
